--- a/index.html
+++ b/index.html
@@ -27,17 +27,28 @@
 				<li><a href="ar-vr.html">AR & VR</a></li>
 				<li><a href="arduino.html">Arduino</a></li>
 				<li><a href="vr-environments.html">VR environments</a></li>
-				<li><a href="computervision.html">Computer Vision</a></li>  
+				<li><a href="computervision.html">Computer Vision</a></li>
 				<li><a href="excursion.html">Excursion</a></li> 
 				<li><a href="labweeks.html">Lab weeks</a></li>    		
 			</ul>
 	    </nav>
 
 	    <main class="grid-item main" id="home">
-	    	<h1>Welcome</h1>
-	    	<p>My name is Djenna Bakker, right now I'm in my second year of the study Communication & Multimedia Design. For the course 'HCI-Technologies' I made a portfolio website, with all the lectures, assignments, excursion and the lab weeks.</p>
-	    	<br>
-	    	<img src="images/djenna.JPG" class="djenna-foto" alt="foto-djenna">
+	    	<h1>Welkom!</h1>
+	    	<img src="images/djenna.png" class="djenna-foto" alt="foto-djenna">
+	    	<p>
+	    		Hallo! Ik ben Djenna Bakker en op dit moment zit ik in mijn tweede jaar van de opleiding Communicatie & Multimedia desing. Voor het vak HCI-technologie heb ik een portfolio gemaakt, waarin alle opdrachten, projecten, excursies en lab weken terug te lezen zijn. 	
+	    	</p>
+	    	<p>
+	    		Tijdens het vak HCI worden veel technieken behandeld die relevant en nieuw zijn. Over deze technieken heb ik wel het een en ander gehoord in mijn opleiding, maar ik heb nog geen kans gehad om er daadwerkelijk iets te doen of te maken. De verschillende technieken zijn bovenin in het menu te zien en worden behandeld en uitgelegd op de desbetreffende pagina. 
+	    	</p>
+
+	    	<!-- Home
+				●	Short introduction of yourself 
+				●	A picture
+				●	Your expectations for this course
+				●	Describe what you want to learn in this course 
+			-->
 	    </main>
 
 	    <footer class="grid-item foot">
