--- a/wearables.html
+++ b/wearables.html
@@ -33,9 +33,23 @@
 			</ul>
 	    </nav>
 
-	    <main class="grid-item main">
+	    <main class="grid-item main" id="wearables">
 	    	<h1>Assignments</h1>
-	    	<p></p>
+	    	<h3>Introductie</h3>
+			<p>Wearables zijn overal tegenwoordig. Wearables zijn technologieën verpakt in dagelijks draagbare accessoires. Het is een manier om bijv. gebruik te maken van sociale media, zonder je telefoon erbij te pakken, om te bellen, sportactiviteiten bij de houden en nog veel meer. Op deze manier kunnen mensen minder snel volledig opgaan in sociale media en hebben ze meer tijd om in van het echte leven te genieten. De populairste wearables zijn: slimme horloges, slimme brillen, fitness trackers, slimme ringen en armbanden en zelf slimme tatoeages. Maar wat mist er nog in het rijtje? Wat kan een echt toevoeging zijn en is nog niet bedacht?</p>
+
+			<h3>Concept</h3>
+			<p>Soms is het lastig om erachter te komen in wat voor stemming een persoon is. Waardoor je mogelijk op een verkeerde manier reageert op iemand, omdat je ervan uit gaat dat jouw observatie correct is. Iemand kan eruitzien alsof hij chagrijnig is, dus jij reageert op een bepaalde manier op die persoon, terwijl dit mogelijk niet van toepassing is en er een miscommunicatie of woordenwisseling ontstaat. Om goed te kunnen inspelen op de gevoelens van anders, zodat je op een passende manier kan communiceren en iemand mogelijk kan helpen, heb ik de ‘slimme stemming tattoo’ bedacht. Deze tatoeage zit op een goed zichtbare plek, bijv. de pols, en verandert van kleur bij de stemming van de gebruiker. Deze tatoeage kan zowel tijdelijk of definitief zijn, en meet bepaalde lichamelijke sensoren om te bepalen in welke stemming de gebruiker is. Op deze manier kunnen anderen gemakkelijk zien in welke stemming anderen en zijzelf zijn, en hier hulp bij bieden of juist inspelen op een goede stemming. Als iemand heel zenuwachtig is voor zijn presentatie, reageert de tattoo op deze emotie en geeft hij de bijpassende kleur. Medestudenten bijv. kunnen dit zien en proberen die persoon te kalmeren zodat hij minder zenuwachtig zal zijn. Misschien is er een vriend of vriendin die worstelt met depressie, angstaanvallen of iets dergelijks, dan kan je aan de hand van de tatoeage die persoon helpen door passende hulp of adviezen aan te bieden. Of je wil bijv. opslag vragen bij je baas, maar je ziet dat de tattoo van je baas rood (boos) is, dan kan je de beslissing nemen om het een andere keer te vragen. </p>
+
+			<p>Momenteel zijn onderzoekers bezig met een van kleur veranderende tattoo, maar deze is gericht op mensen met diabetes, zodat zij direct kunnen zien als bijv. hun bloeddruk erg gedaald is. Deze onderzoekers hebben in plaats van tatoeage inkt en andere vloeistof ontwikkeld met biosensoren. Deze sensoren meten dus verandering, bij diabeten is dat bijv. de bloedsuikerspiegel, en aan de hand daarvan verandert de tatoeage van kleur. De sensoren in dit voorbeeld zijn gefocust op lichamelijke veranderingen voor diabeten, maar bij mijn concept gaat het om de verandering in stemmingen. Als iemand zenuwachtig is, zal hij meer gaan zweten, als iemand boos is, zal hij zijn spieren sneller aanspannen. Met dit soort voorbeelden kunnen de juist biosensoren ontwikkeld worden die deze sensoren kan meten.</p>
+
+			<p>Mogelijk kan er eerst getest worden met een tijdelijke plak tatoeage, waarbij er sensoren in de tatoeage zitten die de veranderingen in de oppervlakte van de huid meet, en hieruit een conclusie van een stemming trekt. Definitieve, ofwel echte tatoeages, kunnen uiteindelijk wel meer informatie verkrijgen, stemmingen meten en het kan dus meer dingen uiteindelijk ‘vertellen’. Maar ik vind dat mensen wel de mogelijkheid moeten krijgen om de tatoeage te testen met een tijdelijke plak tatoeage.</p>
+
+			<h3>Foto’s/video’s/screenshots</h3>
+			<a href="https://www.icepop.com/color-changing-tattoo-ink/" target="_blank"> <img src="images/color-change-tat.png" id="wearables-tat"></a>
+			
+			<img src="images/color-code.png" id="wearables-chart">
+
 	    </main>
 
 	    <main class="grid-item main1">
