--- a/arduino.html
+++ b/arduino.html
@@ -18,7 +18,8 @@
 	  			<a href="#">&#9776;</a>
 	  		</div>
 	  	</header>
-	    <nav id="menu" class="inactive">
+
+	  	 <nav id="menu" class="inactive">
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="wearables.html">Wearables</a></li>
@@ -27,15 +28,69 @@
 				<li><a href="ar-vr.html">AR & VR</a></li>
 				<li><a href="arduino.html">Arduino</a></li>
 				<li><a href="vr-environments.html">VR environments</a></li>
-				<li><a href="computervision.html">Computer Vision</a></li>  
+				<li><a href="computervision.html">Computer Vision</a></li>
 				<li><a href="excursion.html">Excursion</a></li> 
 				<li><a href="labweeks.html">Lab weeks</a></li>    		
 			</ul>
 	    </nav>
 
 	    <main class="grid-item main">
-	    	<h1>Assignments</h1>
-	    	<p></p>
+	    	<h1>Opdrachten</h1>
+
+	    	<!-- Write a text in your own words (± 150 words) per exercise so that the visitor of your portfolio understands what you have done. Include the text, code and pictures/videos  -->
+
+	    	<h3>Opdracht 3c</h3>
+		    	<p>Tekst</p>
+		    	<p>Code</p>
+		    	<video width="320" height="240" autoplay>
+		    		<source src="images/3c.mp4" type="video/mp4">
+		    	</video>
+
+	    	<h3>Opdracht 4c</h3>
+		    	<p>Tekst</p>
+		    	<p>Code</p>
+		    	<p>Video/foto's</p>
+
+	    	<h3>Opdracht 6c</h3>
+		    	<p>Tekst</p>
+		    	<p>Code</p>
+		    	<p>Video/foto's</p>
+
+	    	<h3>Opdracht 7</h3>
+		    	<p>Tekst</p>
+		    	<p>Code</p>
+		    	<p>Video/foto's</p>
+
+	    	<h3>Opdracht 8</h3>
+		    	<p>Tekst</p>
+		    	<p>Code</p>
+		    	<p>Video/foto's</p>
+
+	    	<h3>Opdracht 9b</h3>
+		    	<p>Tekst</p>
+		    	<p>Code</p>
+		    	<p>Video/foto's</p>
+
+	    	<h3>Opdracht 10f</h3>
+		    	<p>Tekst</p>
+		    	<p>Code</p>
+		    	<p>Video/foto's</p>
+
+	    	<h3>Opdracht 11b</h3>
+		    	<p>Tekst</p>
+		    	<p>Code</p>
+		    	<p>Video/foto's</p>
+
+	    	<h3>Opdracht 12b</h3>
+		    	<p>Tekst</p>
+		    	<p>Code</p>
+		    	<p>Video/foto's</p>
+
+	    	<h3>Opdracht 13b</h3>
+		    	<p>Tekst</p>
+		    	<p>Code</p>
+		    	<p>Video/foto's</p>
+
 	    </main>
 
 	    <footer class="grid-item foot">
