--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	  			<a href="#">&#9776;</a>
 	  		</div>
 	  	</header>
+
 	    <nav id="menu" class="inactive">
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -32,6 +33,30 @@
 				<li><a href="labweeks.html">Lab weeks</a></li>    		
 			</ul>
 	    </nav>
+	    
+	    <!-- ----------TRYOUT-------------- -->
+	    <!-- <nav role="navigation">
+		  <ul>
+		    <li><a href="index.html">Home</a></li>
+		    <li><a href="opdrachten.html" aria-haspopup="true">Opdrachten</a>
+		      <ul class="dropdown" aria-label="submenu">
+		        <li><a href="wearables.html">Wearables</a></li>
+		        <li><a href="playfulinteractions.html">Playful interfaces</a></li>
+		        <li><a href="artificialcreatures.html">Artificial creatures</a></li>
+		        <li><a href="ar-vr.html">AR & VR</a></li>
+		      </ul>
+		    </li>
+		    <li><a href="workshops.html" aria-haspopup="true">Workshops</a>
+		      <ul class="dropdown" aria-label="submenu">
+		        <li><a href="arduino.html">Arduino</a></li>
+		        <li><a href="vr-environments.html">VR-environments</a></li>
+		        <li><a href="computervision.html">Computer vision</a></li>
+		      </ul>
+		    </li>
+		    <li><a href="excursion.html">Excursies</a></li>
+		    <li><a href="labweeks.html">Lab weken</a></li>
+		  </ul>
+		</nav> -->
 
 	    <main class="grid-item main" id="home">
 	    	<h1>Welkom!</h1>
