--- a/wearables.html
+++ b/wearables.html
@@ -18,7 +18,8 @@
 	  			<a href="#">&#9776;</a>
 	  		</div>
 	  	</header>
-	    <nav id="menu" class="inactive">
+	    
+	     <nav id="menu" class="inactive">
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="wearables.html">Wearables</a></li>
@@ -27,14 +28,14 @@
 				<li><a href="ar-vr.html">AR & VR</a></li>
 				<li><a href="arduino.html">Arduino</a></li>
 				<li><a href="vr-environments.html">VR environments</a></li>
-				<li><a href="computervision.html">Computer Vision</a></li>  
+				<li><a href="computervision.html">Computer Vision</a></li>
 				<li><a href="excursion.html">Excursion</a></li> 
 				<li><a href="labweeks.html">Lab weeks</a></li>    		
 			</ul>
 	    </nav>
 
 	    <main class="grid-item main" id="wearables">
-	    	<h1>Assignments</h1>
+	    	<h1>Opdracht</h1>
 	    	<h3>Introductie</h3>
 			<p>Wearables zijn overal tegenwoordig. Wearables zijn technologieën verpakt in dagelijks draagbare accessoires. Het is een manier om bijv. gebruik te maken van sociale media, zonder je telefoon erbij te pakken, om te bellen, sportactiviteiten bij de houden en nog veel meer. Op deze manier kunnen mensen minder snel volledig opgaan in sociale media en hebben ze meer tijd om in van het echte leven te genieten. De populairste wearables zijn: slimme horloges, slimme brillen, fitness trackers, slimme ringen en armbanden en zelf slimme tatoeages. Maar wat mist er nog in het rijtje? Wat kan een echt toevoeging zijn en is nog niet bedacht?</p>
 
@@ -46,20 +47,25 @@
 			<p>Mogelijk kan er eerst getest worden met een tijdelijke plak tatoeage, waarbij er sensoren in de tatoeage zitten die de veranderingen in de oppervlakte van de huid meet, en hieruit een conclusie van een stemming trekt. Definitieve, ofwel echte tatoeages, kunnen uiteindelijk wel meer informatie verkrijgen, stemmingen meten en het kan dus meer dingen uiteindelijk ‘vertellen’. Maar ik vind dat mensen wel de mogelijkheid moeten krijgen om de tatoeage te testen met een tijdelijke plak tatoeage.</p>
 
 			<h3>Foto’s/video’s/screenshots</h3>
-			<a href="https://www.icepop.com/color-changing-tattoo-ink/" target="_blank"> <img src="images/color-change-tat.png" id="wearables-tat"></a>
+			<div class="fotos-wearables">
+				<a href="https://www.icepop.com/color-changing-tattoo-ink/" target="_blank"> <img src="images/color-change-tat.png" id="wearables-tat"></a>
 			
-			<img src="images/color-code.png" id="wearables-chart">
+				<img src="images/color-code.png" id="wearables-chart">
+			</div>
+			
 
 	    </main>
 
 	    <main class="grid-item main1">
-	    	<h1>Research</h1>
-	    	<p></p>
+	    	<h1>Onderzoek</h1>
+	    	<p>De meeste wearables op de markt kende ik al, maar ik heb bijna nergens persoonlijke ervaring mee. Ook op school hoor ik wel eens het een en anders over wearables, voornamelijk AR & VR, maar ook hier heb ik nog niet mee gewerkt. Wat ik nog niet wist, is dat er al ‘smart tattoos’ bestaan, die het leven van mensen makkelijker maken. Deze techniek is nog wel heel erg op experimenteel niveau, maar het geeft wel een goed beeld over waar de toekomst mogelijk naartoe gaat. Mensen laten een chip van bijvoorbeeld hun pinpas onder hun huid laten inplanteren, zodat zij altijd en overal gemakkelijk contactloos kunnen pinnen. Ook zijn onderzoekers bezig met het ontwikkelen van een ‘smart tattoo’ die mensen met diabetes aangeeft wanneer bijvoorbeeld hun suikerspiegel gedaald is, door middel van een verandering in de kleur van de tatoeage. Van deze ontwikkelingen was ik mij helemaal niet bewust, maar ik vind het wel bijzonder dat het allemaal zou kunnen. </p>
 	    </main>
 
 	    <main class="grid-item main2">
-	    	<h1>Reflect</h1>
-	    	<p></p>
+	    	<h1>Reflectie</h1>
+	    	<p>Zelf heb ik ook een wearable, namelijk een Fitbit. Ik hou van sporten en ik vind het heel interessant om te zien hoe ik beweeg op een dag, hoeveel calorieën ik verbrand en hoe mijn slaap is. Daarom is een fitness tracker zoals Fitbit ideaal voor mij. Ik kan hier doelen op instellen en de Fitbit houdt mijn beweging bij en geeft mij tips over hoe ik sneller naar mijn doel kan komen. Ik denk dan ook dat wearables echt wel de toekomst zijn. Smartphones worden onderhand alleen maar groter en groter, maar als je ziet hoe populair de smartwatches worden, wil men toch weer een kleiner en handzamer apparaat. Wel las ik steeds vaker dat wearables een mogelijke bedreiging kan zijn voor de privacy van gebruikers. 
+			Dit kan mogelijk een groot struikelblok zijn voor gebruikers, op het moment dat bedrijven misbruik maken van de persoonlijke gegevens van de gebruikers. Veel wearables willen toegang hebben tot de gps-locatie van de gebruiker, als dit in verkeerde handen valt, zal de gebruiker zich ook niet meer veilig voelen. Dit zou nog wel eens het einde van de wearables kunnen worden. 
+			</p>
 	    </main>
 
 	    <footer class="grid-item foot">
