--- a/computervision.html
+++ b/computervision.html
@@ -35,7 +35,7 @@
 	    </nav>
 
 	    <main class="grid-item main">
-	    	<h1>Assignments</h1>
+	    	<h1>Opdrachten</h1>
 	    	<p></p>
 	    </main>
 
