--- a/labweeks.html
+++ b/labweeks.html
@@ -45,7 +45,7 @@
 	    </main>
 
 	    <main class="grid-item main2">
-	    	<h1>Reflect</h1>
+	    	<h1>Reflectie</h1>
 	    	<p></p>
 	    </main>
 
