--- a/playfulinteractions.html
+++ b/playfulinteractions.html
@@ -35,17 +35,17 @@
 	    </nav>
 
 	    <main class="grid-item main">
-	    	<h1>Assignments</h1>
+	    	<h1>Opdrachten</h1>
 	    	<p></p>
 	    </main>
 
 	    <main class="grid-item main1">
-	    	<h1>Research</h1>
+	    	<h1>Onderzoek</h1>
 	    	<p></p>
 	    </main>
 
 	    <main class="grid-item main2">
-	    	<h1>Reflect</h1>
+	    	<h1>Reflectie</h1>
 	    	<p></p>
 	    </main>
 
