--- a/arduino.html
+++ b/arduino.html
@@ -78,7 +78,7 @@ void loop(){
 					 </code></pre>
 
 		    	<p>Video/foto's:</p>
-			    	<video src="images/3c.mp4" controls class="arduino-vid">
+			    	<video src="images/3c.mp4" controls muted class="arduino-vid">
 						  Uw 
 					</video>
 
@@ -113,7 +113,7 @@ void loop(){
 					 </code></pre>
 
 		    	<p>Video/foto's</p>
-			    	<video src="images/4c.mp4" controls class="arduino-vid">
+			    	<video src="images/4c.mp4" controls muted class="arduino-vid">
 						  Uw 
 					</video>
 <!-----------------Opdracht 6c----------------->
@@ -148,7 +148,7 @@ void loop() {
 }
 					 </code></pre>
 		    	<p>Video/foto's</p>
-		    		<video src="images/6c.mp4" controls class="arduino-vid">
+		    		<video src="images/6c.mp4" controls muted class="arduino-vid">
 						  Uw 
 					</video>
 
@@ -205,10 +205,10 @@ void loop(){
 					 </code></pre>
 
 		    	<p>Video/foto's</p>
-		    		<video src="images/7.3.mp4" controls class="arduino-vid">
+		    		<video src="images/7.3.mp4" controls muted class="arduino-vid">
 						  Uw 
 					</video>
-					<video src="images/7.5.mp4" controls class="arduino-vid">
+					<video src="images/7.5.mp4" controls muted class="arduino-vid">
 						  Uw 
 					</video>
 					<img src="images/8.2.jpeg" class="arduino-foto">
@@ -304,7 +304,7 @@ void serialEvent (Serial myPort) {
 				</code></pre>
 				
 		    	<p>Video/foto's</p>
-		    		<video src="images/9b.mp4" controls class="arduino-vid">
+		    		<video src="images/9b.mp4" controls muted class="arduino-vid">
 						  Uw 
 					</video>
 
@@ -336,7 +336,7 @@ void loop() {
 					 </code></pre>
 
 		    	<p>Video/foto's</p>
-		    		<video src="images/10.f.mp4" controls class="arduino-vid">
+		    		<video src="images/10.f.mp4" controls muted class="arduino-vid">
 						  Uw 
 					</video>
 
